# app-android-xtrust-standalone

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/xtrust/standalone/: ExampleInstrumentedTest.kt
app/src/bonsai/java/com/xtrust/standalone/bonsai/: BonsaiLlmEngine.kt
app/src/bonsai/java/com/xtrust/standalone/llm/: LocalLlmCatalog.kt
app/src/gemma/java/com/xtrust/standalone/llm/: LiteRtLlmEngine.kt  LocalLlmCatalog.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/xtrust/standalone/: MainActivity.kt  XtrustApplication.kt
app/src/main/java/com/xtrust/standalone/asr/: LocalAsrEngine.kt  SherpaOnnxAsrEngine.kt
app/src/main/java/com/xtrust/standalone/audio/: MicrophoneVadMonitor.kt  WavFileWriter.kt
app/src/main/java/com/xtrust/standalone/data/: AppDatabaseHelper.kt  CardEntity.kt  ChatMessageEntity.kt  ChatThreadEntity.kt  RecordingSessionEntity.kt  SessionSummaryEntity.kt  TopicEntity.kt  TranscriptRepository.kt  WrapupJobEntity.kt
app/src/main/java/com/xtrust/standalone/llm/: LiteRtGemmaEngine.kt  LlmDiagnostics.kt  LocalLlmDefinition.kt  LocalLlmEngine.kt
app/src/main/java/com/xtrust/standalone/ui/: AppShell.kt  AsrModels.kt  AudioSegmentModels.kt  ChatModels.kt  ChatScreen.kt  HomeScreen.kt  SettingsScreen.kt  VadModels.kt  XtrustViewModel.kt
app/src/main/java/com/xtrust/standalone/util/: AppLog.kt
app/src/main/java/com/xtrust/standalone/vad/: EnergyVadEngine.kt  LocalVadEngine.kt  ThresholdVadEngine.kt
app/src/main/java/com/xtrust/standalone/wrapup/: SessionWrapupService.kt  (+1 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/xtrust/standalone/: ExampleUnitTest.kt
bonsai-runtime/: build.gradle.kts
bonsai-runtime/src/main/cpp/: CMakeLists.txt  bonsai_runtime.cpp  logging.h
docs/: asr-plan.md  bonsai-runtime.md  current-state.md  session-log.md  session-wrapup.md
gradle/: libs.versions.toml
scripts/: download-bonsai-model.sh
(+7 files in other folders)
